# jired

./: .gitignore  Cargo.toml  Dockerfile  README.md  RELEASE.md  dist-workspace.toml  go.mod  install.sh  justfile  main.go  main.go.bck  readme.md  release.sh
.github/workflows/: ci.yml  docker.yml  github-actions.yml  release.yml
cmd/: args.go  auth.go  root.go
docs/: Commands, Subcommands and Arguments.md  Integrations.md  Jired.md  Secrets Management.md
docs/.obsidian/: appearance.json  workspace.json
internal/boards/: boards.go  jira.go
internal/clocks/: clockify.go  clocks.go
internal/tui/: integrations.go  list.go
src/: error.rs  lib.rs  main.rs  prelude.rs  tracing.rs
src/app/: jira.rs  mod.rs
src/boards/: clickup.rs  jira.rs  mod.rs
src/clocks/: clickup.rs  clockify.rs  jira.rs  mod.rs
src/common/: config.rs  helpers.rs  mod.rs  tracker.rs
website/: astro.config.mjs  package.json
website/src/content/docs/: index.mdx
website/src/content/docs/guides/: installation.mdx  quick.md
wix/: main.wxs
