[package]
name = "jired"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.88"
chrono = "0.4.40"
clap = { version = "4.5.36", features = ["derive","env"] }
derive_more = { version = "2.0.1", features = ["from", "into_iterator"] }
dirs = "6.0.0"
keyring = { version = "3.6.2", features = ["linux-native-sync-persistent","linux-native","sync-secret-service"] }
regex = "1.11.1"
reqwest = "0.12.15"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
strum = { version = "0.27.1", features = ["derive"] }
tempfile = "3.19.1"
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["full"] }
tokio-test = "0.4.4"
toml = "0.8.21"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[dev-dependencies]
clippy = "0.0.302"
