[package]
name = "jired"
version = "1.0.0"
edition = "2021"
license = "MIT"
keywords = ["cli", "time-logging","jira","clockify"]

[dependencies]
async-trait = "0.1.88"
chrono = "0.4.40"
clap = { version = "4.5.36", features = ["derive","env"] }
derive_more = { version = "2.0.1", features = ["from", "into_iterator"] }
dirs = "6.0.0"
keyring = { version = "3.6.2", features = ["linux-native-sync-persistent","linux-native","sync-secret-service"] }
mockall = "0.13.1"
regex = "1.11.1"
reqwest = {version="0.12.15",features=["json"]}
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
shell-words = "1.1.0"
strum = { version = "0.27.1", features = ["derive"] }
tempfile = "3.19.1"
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["full"] }
tokio-stream = "0.1.17"
tokio-test = "0.4.4"
tokio-util = "0.7.15"
toml = "0.8.21"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
urlencoding = "2.1.3"

[dev-dependencies]
clippy = "0.0.302"

[profile.dev]
incremental = true
